2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-quit-lisp): Optionally send kill signal.
	(slime-quit-connection-at-point): Disconnect after some timeout.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	Fixes for heap dumping.

	* swank.lisp (*log-output*): Don't initialize at load-time,
	otherwise the stream would end up in a heap image.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank-lispworks.lisp (defimplementation): Record location.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (*maximum-pipelined-output-chunks*): New variable

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	Display the "Use default debugger" restart more prominently
	for testing.

	* swank.lisp (swank-debugger-hook): Bind a user visible restart
	to invoke the native debugger.
	(*global-debugger*): Make this nil by default.
	(sldb-loop): Minor cleanups.
	(sldb-break-with-default-debugger): Invoke the native debugger
	on top of the slime debugger.

	* slime.el (slime-simple-completions): Bind slime-current-thread
	to t so that completion is peformed in a fresh thread.
	(sldb-setup): Always pop to the debugger buffer.
	(sldb-activate): Optionally select the window.

	* swank-sbcl.lisp (sb-thread::get-foreground): Override this
	as the default implementation is unusable for Slime.

	* swank-lispworks.lisp (environment-display-notifier): Just
	return t.

2008-08-09  Helmut Eller  <heller@common-lisp.net>

	* swank-lispworks.lisp (disassemble-frame): Implemented.

2008-08-09  Tobias C. Rittweiler  <tcr@freebits.de>

	M-x slime doesn't destroy the window layout anymore when you
	switch windows/frames while the connection is being set up.

	* slime.el (slime-hide-inferior-lisp-buffer): Search for the
	inferior-lisp buffer's window in all frames.
	(slime-repl-update-banner): Do not pop to the REPL buffer.

2008-08-08  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el: Fixing `q' in Xref buffers.
